[gd_scene load_steps=9 format=2]

[ext_resource path="res://Escenas/Amigos/Amigo.gd" type="Script" id=1]
[ext_resource path="res://Escenas/Amigos/Amigos.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Sprite/Tank/Tanque.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Sprite/Enemigos/Cañon.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Sprite/Enemigos/Spr_Cañon_Enemy.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.3017, 8.41288 )

[sub_resource type="CircleShape2D" id=2]
radius = 139.045

[sub_resource type="CircleShape2D" id=3]
radius = 582.838

[node name="Amigos" type="Node2D"]
script = ExtResource( 1 )

[node name="BodyTankEnemy" type="KinematicBody2D" parent="." groups=[
"player",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="BodyTankEnemy"]
position = Vector2( 0, -21.7959 )
texture = ExtResource( 3 )

[node name="Node" type="Node" parent="BodyTankEnemy"]

[node name="Spr_Cañon_Enemy" type="Sprite" parent="BodyTankEnemy"]
position = Vector2( 0.0604782, -0.183012 )
texture = ExtResource( 4 )
offset = Vector2( -0.0604782, -14.5123 )
script = ExtResource( 5 )

[node name="Colision" type="CollisionShape2D" parent="BodyTankEnemy"]
position = Vector2( 0.128511, 1.62568 )
shape = SubResource( 1 )

[node name="TextEdit" type="TextEdit" parent="BodyTankEnemy"]
modulate = Color( 1, 1, 1, 0.32 )
margin_left = -56.387
margin_top = -60.2397
margin_right = 71.613
margin_bottom = -28.2397
mouse_default_cursor_shape = 0
size_flags_stretch_ratio = 4.3
text = "a"

[node name="Area2D" type="Area2D" parent="BodyTankEnemy"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyTankEnemy/Area2D"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="BodyTankEnemy/Area2D"]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyTankEnemy/Area2D/Area2D"]
shape = SubResource( 3 )

[node name="Tiempo_Disparo" type="Timer" parent="BodyTankEnemy"]
autostart = true
[connection signal="body_entered" from="BodyTankEnemy/Area2D" to="BodyTankEnemy" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="BodyTankEnemy/Area2D" to="BodyTankEnemy" method="SaleDelArea" flags=3]
[connection signal="body_entered" from="BodyTankEnemy/Area2D/Area2D" to="BodyTankEnemy" method="SeguirAPlayer"]
[connection signal="body_exited" from="BodyTankEnemy/Area2D/Area2D" to="BodyTankEnemy" method="SaleDelAreaSeguirAPlayer"]
[connection signal="timeout" from="BodyTankEnemy/Tiempo_Disparo" to="BodyTankEnemy" method="Tiempo_Disparo"]
